--- a/app/modules/dataBase/template/mdDialog/showProcessDetail.html
+++ b/app/modules/dataBase/template/mdDialog/showProcessDetail.html
@@ -74,11 +74,11 @@
 
             </div>
         </md-dialog-content>
-        <md-dialog-actions layout="row" class="new--project--manage--modal--footer">
-            <span flex></span>
-            <md-button ng-click="vm.cancel()" class="default--btn" translate="MODULES_BATCH_CLOSE">
-                关闭
-            </md-button>
+        <!--<md-dialog-actions layout="row" class="new&#45;&#45;project&#45;&#45;manage&#45;&#45;modal&#45;&#45;footer">-->
+            <!--<span flex></span>-->
+            <!--<md-button ng-click="vm.cancel()" class="default&#45;&#45;btn" translate="MODULES_BATCH_CLOSE">-->
+                <!--关闭-->
+            <!--</md-button>-->
         </md-dialog-actions>
     </form>
 </md-dialog>
