--- a/app/modules/main/css/_infoArchives.scss
+++ b/app/modules/main/css/_infoArchives.scss
@@ -4,7 +4,7 @@
   width:8px;
   height: 8px;
 }
-::-webkit-scrollbar-track{background-color:white;}
+::-webkit-scrollbar-track{background-color:transparent;}
 ::-webkit-scrollbar-thumb{background-color:#c1c1c1;width: 5px;border-radius: 10px;}
 ::-webkit-scrollbar-track-piece{}
 ::-webkit-scrollbar-thumb:hover {background-color:#adadad}
@@ -173,6 +173,8 @@
         //border-top: 1px solid #d7d7d7;
         border-top: 1px solid #46BC98;
         margin-top: -1px;
+        overflow-x: hidden;
+        overflow-y: auto;
         .select--data--source--box{
           font-size: 16px;
           padding: 22px 0 20px 25px;
