--- a/app/modules/projectManage/css/_projectManage.scss
+++ b/app/modules/projectManage/css/_projectManage.scss
@@ -36,6 +36,7 @@
   }
   .project--manage--data--list--wrapper{
     height: 100%;
+    overflow: auto;
     .list--wrap{
       background: #ffffff;
     }
@@ -92,6 +93,9 @@
         display: table-cell;
         vertical-align: middle;
         text-align: center;
+        img{
+          max-width: 90%;
+        }
       }
     }
   }
@@ -436,7 +440,7 @@
     //padding: 0 80px 0 0;
     //border-right: 1px solid #d7d7d7;
     &.rule--set{
-      min-width: 912px;
+      min-width: 850px;
     }
     .edit--project--row--box{
       margin-bottom: 40px;
