--- a/app/modules/batch/css/_batch.scss
+++ b/app/modules/batch/css/_batch.scss
@@ -246,7 +246,7 @@
   right: 0;
   bottom: 0;
   min-height: 445px;
-  min-width: 1000px;
+  //min-width: 1000px;
   .batch--no--data__prompt--box{
     display: table;
     width: 1px;
@@ -257,7 +257,7 @@
     }
     .prompt--head{
       display:table-cell;
-      font-size: 24px;
+      font-size: 18px;
       color: #C9C9C9;
       padding: 30px 0 20px 0;
     }
