--- a/app/modules/batch/template/mdDialog/checkDetailData.html
+++ b/app/modules/batch/template/mdDialog/checkDetailData.html
@@ -20,7 +20,7 @@
                 </md-button>
             </div>
         </div>
-        <div ng-show="gridOptions.data.length == 0 && !vm.loading" class="loading" translate="没有数据">
+        <div ng-show="gridOptions.data.length == 0 && !vm.loading"  class="no--data" translate="MODULES_BATCH_DELETE_NO_DATA">
             没有数据
         </div>
         <div ng-show="vm.loading == true" class="loading" translate="MODULES_DATABASE_LOADING">
