--- a/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/updateNodeName.html
+++ b/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/updateNodeName.html
@@ -23,6 +23,13 @@
                                hs-form-message-show="vm.newFileName.submit"
                                hs-form-message-template="newFileName_Filename.html"
                         >
+
+                    </div>
+                    <div class="popover-wrapper attribute--row--box__value">
+                        <md-checkbox style="margin-left:15px;" class="md-primary"  ng-model="vm.isRepeat"
+                                     aria-label="Checkbox 1">
+                            <span translate="是否重复"></span>
+                        </md-checkbox>
                     </div>
                 </div>
             </div>
