--- a/app/css/main.css
+++ b/app/css/main.css
@@ -592,8 +592,7 @@ div.ui-grid-cell input.edit-input {
   border-right: none; }
 
 .ui-grid-render-container-body .ui-grid-viewport[role="rowgroup"] {
-  overflow-x: auto !important;
-  overflow-y: auto !important; }
+  overflow-x: auto !important; }
 
 .ui-grid-header-cell:last-child .ui-grid-column-resizer.right {
   border-right: none !important; }
@@ -690,6 +689,12 @@ div.ui-grid-cell input.edit-input {
 .ui-grid-canvas {
   padding-top: 0;
   margin-top: -1px; }
+
+.ui-grid-pinned-container.ui-grid-pinned-container-right .ui-grid-cell:first-child {
+  border-left: none; }
+
+.ui-grid-pinned-container.ui-grid-pinned-container-right .ui-grid-header-cell:first-child {
+  border-left: none; }
 
 td {
   vertical-align: middle !important; }
@@ -915,60 +920,62 @@ path.link {
         margin-right: 15px; }
       .data--base--sidenav--right--box .batch--info--box .batch--info--count .data--count {
         color: #3B98BE; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .md-toolbar-tools {
-    font-size: 13px;
-    color: #e0e1e5;
-    padding: 0 6px;
-    line-height: 1; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn {
-    font-size: 13px;
-    color: #676767;
-    width: 29px;
-    height: 25px;
-    min-height: 25px;
-    line-height: 25px;
-    padding: 0;
-    background: #d7d7d7;
-    border-radius: 5px;
-    margin-left: 11px !important; }
-    .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn:hover {
-      background: #d7d7d7;
-      opacity: 0.9; }
-    .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn .fa {
-      font-size: 20px;
+  .data--base--sidenav--right--box .edit--project--manage--head-box {
+    padding: 0 15px; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .md-toolbar-tools {
+      font-size: 13px;
+      color: #e0e1e5;
+      padding: 0 6px;
+      line-height: 1; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn {
+      font-size: 13px;
+      color: #676767;
+      width: 29px;
       height: 25px;
+      min-height: 25px;
       line-height: 25px;
-      width: 100%;
-      text-align: center;
-      padding-right: 2px; }
-      .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn .fa:hover {
-        text-decoration: none; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .title {
-    color: #797979; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .project--manage--head {
-    color: #337ab7;
-    padding: 0 7px; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .current--column {
-    color: #999999;
-    padding: 0 7px; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .save--template--box {
-    position: absolute;
-    top: 14px;
-    right: 0; }
-    .data--base--sidenav--right--box .edit--project--manage--head-box .save--template--box .current--version {
-      display: inline-block;
-      color: #4A4A4A;
-      vertical-align: middle; }
-      .data--base--sidenav--right--box .edit--project--manage--head-box .save--template--box .current--version__select {
+      padding: 0;
+      background: #d7d7d7;
+      border-radius: 5px;
+      margin-left: 11px !important; }
+      .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn:hover {
+        background: #d7d7d7;
+        opacity: 0.9; }
+      .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn .fa {
+        font-size: 20px;
+        height: 25px;
+        line-height: 25px;
+        width: 100%;
+        text-align: center;
+        padding-right: 2px; }
+        .data--base--sidenav--right--box .edit--project--manage--head-box .edit--project--manage--head--btn .fa:hover {
+          text-decoration: none; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .title {
+      color: #797979; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .project--manage--head {
+      color: #337ab7;
+      padding: 0 7px; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .current--column {
+      color: #999999;
+      padding: 0 7px; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .save--template--box {
+      position: absolute;
+      top: 14px;
+      right: 15px; }
+      .data--base--sidenav--right--box .edit--project--manage--head-box .save--template--box .current--version {
         display: inline-block;
-        margin-left: 10px; }
-  .data--base--sidenav--right--box .edit--project--manage--head-box .fa {
-    font-size: 14px; }
+        color: #4A4A4A;
+        vertical-align: middle; }
+        .data--base--sidenav--right--box .edit--project--manage--head-box .save--template--box .current--version__select {
+          display: inline-block;
+          margin-left: 10px; }
+    .data--base--sidenav--right--box .edit--project--manage--head-box .fa {
+      font-size: 14px; }
 
 .two--px--line {
-  width: calc(100% - 16px);
+  width: calc(100% - 48px);
   height: 2px;
-  margin: 0 8px;
+  margin: 0 24px;
   background: #d7d7d7; }
 
 .data--base--wrapper {
@@ -981,7 +988,7 @@ path.link {
   .data--base--wrapper .header {
     min-height: 0; }
   .data--base--wrapper .data--base--column--wrapper {
-    height: calc(100% - 66px); }
+    height: 100%; }
     .data--base--wrapper .data--base--column--wrapper.project--edit {
       position: absolute;
       top: 110px;
@@ -1199,7 +1206,8 @@ path.link {
           vertical-align: middle;
           padding-left: 20px;
           width: 400px;
-          margin-top: 1px; }
+          margin-top: 1px;
+          line-height: normal; }
         .check--data--modal .check--data--content .search--wrap .search--box .fa-search {
           position: absolute;
           top: 11px;
@@ -1222,6 +1230,10 @@ path.link {
   height: calc(100% - 96px);
   overflow: auto;
   position: relative; }
+  .data--base--svg--wrap .bigger--btn {
+    height: 200px;
+    position: fixed;
+    top: 178px; }
   .data--base--svg--wrap .data--base--svg--operation-box {
     position: absolute;
     top: 25px;
@@ -1314,10 +1326,10 @@ path.link {
   display: inline-block;
   font-size: 12px;
   border-radius: 4px;
-  padding: 15px 10px;
-  background: #333333;
+  padding: 15px 30px 15px 15px;
+  background: #000000;
   color: #ffffff;
-  opacity: .95;
+  opacity: .7;
   word-break: keep-all;
   position: relative; }
   .tiptool--show--wrap .tiptool--show--data--table th {
@@ -1325,17 +1337,46 @@ path.link {
     font-weight: normal; }
   .tiptool--show--wrap .tiptool--show--data--table th td {
     word-break: keep-all; }
+  .tiptool--show--wrap .tiptool--show--data--table .attr--row {
+    padding: 3px;
+    white-space: nowrap; }
+.tiptool--show--wrap .remove--btn {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 50%;
+  right: 7px;
+  margin-top: -8px;
+  font-size: 16px; }
+  .tiptool--show--wrap .remove--btn:hover {
+    opacity: .8; }
 .tiptool--show--wrap .org--bot {
   width: 0;
   height: 0;
   font-size: 0;
   border-width: 10px;
   border-style: solid;
-  border-color: transparent #333333 transparent transparent;
+  border-color: transparent #000000 transparent transparent;
   overflow: hidden;
   position: absolute;
   left: -19px;
-  top: 60px; }
+  top: 40%; }
+
+.connectMap-detail {
+  transition: 0.3s linear all;
+  -webkit-transition: 0.3s linear all; }
+
+.connectMap-detail.ng-enter {
+  opacity: 0; }
+
+.connectMap-detail.ng-enter.ng-enter-active {
+  opacity: 1; }
+
+.connectMap-detail.ng-leave {
+  opacity: 1; }
+
+.connectMap-detail.ng-leave.ng-leave-active {
+  opacity: 0; }
 
 .hs-user-login {
   width: 100%;
@@ -1705,7 +1746,7 @@ path.link {
   height: 100%; }
 
 .preview--record--scroll--wrap {
-  height: 100%;
+  height: calc(100% - 108px);
   overflow: auto; }
 
 .project--manage--main--content--wrapper {
@@ -1735,7 +1776,7 @@ path.link {
       .project--manage--main--content--wrapper .new--project--wrapper .new--project--btn--wrap md-divider {
         border-top-color: #e4e4e4; }
   .project--manage--main--content--wrapper .project--manage--data--list--wrapper {
-    height: 100%;
+    height: calc(100% - 95px);
     overflow: auto; }
     .project--manage--main--content--wrapper .project--manage--data--list--wrapper .list--wrap {
       background: #ffffff; }
@@ -1867,10 +1908,10 @@ path.link {
   height: 100%;
   position: relative; }
   .data--module--new--prompt--wrap .data--module--new--prompt--box {
-    padding: 0 15px;
-    height: 100%; }
+    height: 100%;
+    overflow: hidden; }
   .data--module--new--prompt--wrap .new--prompt--box--wrap {
-    height: 100%; }
+    height: calc(100% - 20px); }
   .data--module--new--prompt--wrap .data--module--content--wrap {
     height: 100%;
     position: relative; }
@@ -1878,7 +1919,7 @@ path.link {
     color: #337ab7;
     background: #ECF6FB;
     padding: 20px;
-    margin-top: 20px; }
+    margin: 20px 15px 0 15px; }
     .data--module--new--prompt--wrap .new--prompt--box__head {
       font-size: 16px; }
       .data--module--new--prompt--wrap .new--prompt--box__head img {
@@ -2010,16 +2051,17 @@ path.link {
     font-size: 15px; }
 
 .edit--project--manage--wrapper {
-  padding: 0 8px; }
+  padding: 0 24px;
+  height: calc(100% - 64px);
+  overflow: auto; }
   .edit--project--manage--wrapper.data--module {
     height: calc(100% - 87px);
     overflow: auto;
-    padding: 0;
-    margin-right: -15px; }
+    padding: 0; }
     .edit--project--manage--wrapper.data--module .bigger--map--box {
       position: absolute;
       top: 100px;
-      left: 7px; }
+      left: 14px; }
       .edit--project--manage--wrapper.data--module .bigger--map--box .btn {
         color: #797979;
         display: block;
@@ -2150,8 +2192,8 @@ path.link {
     width: 150px; }
 
 .basic--data--show--wrap {
-  min-width: 850px;
-  padding: 0 15px; }
+  height: 100%;
+  min-width: 850px; }
 
 /***************************** Dropzone Styling *****************************/
 .dndPlaceholder {
@@ -2215,17 +2257,17 @@ path.link {
   height: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-  margin: 15px 0;
-  padding-left: 15px;
   position: relative; }
   .module--Template--wrap .models--list--out--wrap {
-    height: 100%; }
+    height: 100%;
+    padding-left: 24px; }
   .module--Template--wrap .models--list--wrap {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     width: 286px;
+    margin-top: 15px;
     padding-right: 5px;
     overflow-y: auto; }
     .module--Template--wrap .models--list--wrap .models--list--box {
@@ -2249,8 +2291,8 @@ path.link {
     height: 100%;
     padding-right: 296px; }
     .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box {
-      padding-right: 15px;
-      height: 100%; }
+      height: 100%;
+      padding-top: 15px; }
       .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .operation--btn--box {
         text-align: right; }
         .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .operation--btn--box .blue--btn {
@@ -2446,7 +2488,7 @@ path.link {
 
 .preview--template--form--modal__content {
   padding: 0 16px 26px 16px !important;
-  height: calc(100% - 108px); }
+  margin-top: 20px; }
 
 .preview--template--form--modal__table {
   color: #999999;
@@ -2632,8 +2674,7 @@ path.link {
   left: 0;
   right: 0;
   bottom: 0;
-  min-height: 445px;
-  min-width: 1000px; }
+  min-height: 445px; }
   .batch--no--data .batch--no--data__prompt--box {
     display: table;
     width: 1px;
@@ -2643,7 +2684,7 @@ path.link {
       opacity: .7; }
     .batch--no--data .batch--no--data__prompt--box .prompt--head {
       display: table-cell;
-      font-size: 24px;
+      font-size: 18px;
       color: #C9C9C9;
       padding: 30px 0 20px 0; }
     .batch--no--data .batch--no--data__prompt--box .prompt--content {
@@ -2769,12 +2810,12 @@ path.link {
   display: flex;
   display: -webkit-flex;
   box-sizing: border-box;
-  padding: 0 30px; }
+  padding-left: 30px; }
   .mission--list--spread--box .attr--box {
     flex: initial;
     -webkit-flex: initial;
     width: auto;
-    min-width: 300px;
+    min-width: 270px;
     flex: 1;
     padding: 4px 8px;
     white-space: nowrap;
@@ -2782,9 +2823,15 @@ path.link {
     text-overflow: ellipsis; }
     .mission--list--spread--box .attr--box.date {
       flex: 1;
-      min-width: 250px; }
+      min-width: 265px; }
     .mission--list--spread--box .attr--box.data--count {
-      min-width: 150px; }
+      min-width: 130px;
+      max-width: 160px; }
+    .mission--list--spread--box .attr--box.conversion--count {
+      min-width: 200px;
+      max-width: 240px; }
+    .mission--list--spread--box .attr--box.percentage--count {
+      min-width: 295px; }
     .mission--list--spread--box .attr--box .progress--info {
       display: inline-block;
       vertical-align: middle;
