--- a/app/modules/dataBase/css/_dataBase.scss
+++ b/app/modules/dataBase/css/_dataBase.scss
@@ -139,6 +139,7 @@
   }
   .edit--project--manage--head-box{
     //border-bottom: 1px solid #e4e4e4;
+    padding: 0 15px;
     .md-toolbar-tools{
       font-size: 13px;
       color: #e0e1e5;
@@ -188,7 +189,7 @@
     .save--template--box{
       position: absolute;
       top: 14px;
-      right: 0;
+      right: 15px;
       .current--version{
         display: inline-block;
         color: #4A4A4A;
@@ -206,10 +207,10 @@
 }
 //dataModule
 .two--px--line{
-  width: calc(100% - 16px);
+  width: calc(100% - 48px);
   height: 2px;
   //margin: 10px 8px;
-  margin: 0 8px;
+  margin: 0 24px;
   background: #d7d7d7;
 }
 
@@ -233,7 +234,7 @@
     //height: 100%;
     //overflow: hidden;
     //width: 235px;
-    height: calc(100% - 66px);
+    height: 100%;
     &.project--edit{
       position: absolute;
       top: 110px;
@@ -532,6 +533,7 @@
           padding-left: 20px;
           width: 400px;
           margin-top: 1px;
+          line-height: normal;
         }
         .fa-search{
           position: absolute;
@@ -564,6 +566,11 @@
   height: calc(100% - 96px);
   overflow:auto;
   position: relative;
+  .bigger--btn{
+    height: 200px;
+    position: fixed;
+    top: 178px;
+  }
   .data--base--svg--operation-box{
     position: absolute;
     top: 25px;
