--- a/app/modules/projectManage/css/_projectManage.scss
+++ b/app/modules/projectManage/css/_projectManage.scss
@@ -35,7 +35,7 @@
     }
   }
   .project--manage--data--list--wrapper{
-    height: 100%;
+    height: calc(100% - 95px);
     overflow: auto;
     .list--wrap{
       background: #ffffff;
@@ -200,11 +200,12 @@
   position: relative;
   //padding: 0 15px;
   .data--module--new--prompt--box{
-    padding: 0 15px;
+    //padding: 0 15px;
     height: 100%;
+    overflow: hidden;
   }
   .new--prompt--box--wrap{
-    height: 100%;
+    height: calc(100% - 20px);
   }
   .data--module--content--wrap{
     height: 100%;
@@ -214,7 +215,7 @@
     color: #337ab7;
     background: #ECF6FB;
     padding: 20px;
-    margin-top: 20px;
+    margin: 20px 15px 0 15px;
     &__head{
       font-size: 16px;
       img{
@@ -412,16 +413,17 @@
 //editProjectManage
 
 .edit--project--manage--wrapper{
-  padding: 0 8px;
+  padding: 0 24px;
+  height: calc(100% - 64px);
+  overflow: auto;
   &.data--module{
     height: calc(100% - 87px);
     overflow: auto;
     padding: 0;
-    margin-right: -15px;
     .bigger--map--box{
       position: absolute;
       top: 100px;
-      left: 7px;
+      left: 14px;
       .btn{
         color: #797979;
         display: block;
@@ -608,8 +610,9 @@
 
 //basic Data
 .basic--data--show--wrap{
+  height: 100%;
   min-width: 850px;
-  padding: 0 15px;
+  //padding: 0 15px;
 }
 
 /***************************** Dropzone Styling *****************************/
@@ -665,11 +668,13 @@
   height: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-  margin: 15px 0;
-  padding-left: 15px;
+  //margin: 15px 0;
+  //padding: 0 15px;
   position: relative;
   .models--list--out--wrap{
     height: 100%;
+    padding-left: 24px;
+    //margin-top: 15px;
   }
   .models--list--wrap{
     position: absolute;
@@ -678,11 +683,13 @@
     right: 0;
     bottom: 0;
     width: 286px;
+    margin-top: 15px;
     padding-right: 5px;
     overflow-y: auto;
     .models--list--box{
       //padding: 20px 0 20px 20px;
       padding: 15px 0 20px 10px;
+      //margin-top: 15px;
       background: #f2f2f0;
       border-radius: 4px;
       button{
@@ -710,8 +717,9 @@
     height: 100%;
     padding-right: 296px;
     .module--Template--wrap__show-box{
-      padding-right: 15px;
+      //padding-right: 15px;
       height: 100%;
+      padding-top: 15px;
       .operation--btn--box{
         text-align: right;
         .blue--btn{
@@ -965,7 +973,8 @@
 }
 .preview--template--form--modal__content{
   padding: 0 16px 26px 16px !important;
-  height: calc(100% - 108px);
+  margin-top: 20px;
+  //height: calc(100% - 108px);
 }
 .preview--template--form--modal__table{
   color:  #999999;
