--- a/app/modules/serviceWatch/css/_serviceWatch.scss
+++ b/app/modules/serviceWatch/css/_serviceWatch.scss
@@ -138,13 +138,13 @@
   display: flex;
   display: -webkit-flex;
   box-sizing: border-box;
-  padding: 0 30px;
+  padding-left: 30px;
   .attr--box{
     //display: inline-block;
     flex: initial;
     -webkit-flex: initial;
     width: auto;
-    min-width: 300px;
+    min-width: 270px;
     flex: 1;
     padding: 4px 8px;
     //word-break: keep-all;
@@ -153,10 +153,18 @@
     text-overflow: ellipsis;
     &.date{
       flex: 1;
-      min-width: 250px;
+      min-width: 265px;
     }
     &.data--count{
-      min-width: 150px;
+      min-width: 130px;
+      max-width: 160px;
+    }
+    &.conversion--count{
+      min-width: 200px;
+      max-width: 240px;
+    }
+    &.percentage--count{
+      min-width: 295px;
     }
     .progress--info{
       display: inline-block;
